Edited wiki page through web user interface.

--- a/wiki/Concept.wiki
+++ b/wiki/Concept.wiki
@@ -41,7 +41,7 @@ Further on in the game, you'll meet exciting monsters and bosses to fight, in an
  * Hectic and fast-paced, though compelling gameplay.
  * Original and ravishing soundtrack.
  * Linux, MacOS and Windows support
- * A fascinated story
+ * A fascinating story
 
 
 ----
